# fastapi-langchain-fakeLLM

./: .gitignore  Makefile  README.md  docker-compose.yml
fastapi_app/: Dockerfile  main.py
fastapi_app/api/: models.py
fastapi_app/api/routes/: agent.py
fastapi_app/app/: main.py  pyproject.toml
fastapi_app/app/api/: models.py
fastapi_app/app/api/routes/: agent.py
fastapi_app/llm/: offline_llm.py
frontend/: Dockerfile
frontend/app/: consts.py  main.py  pyproject.toml
frontend/app/helpers/: format_response.py  persist_session_state.py
frontend/app/utils/: logs.py
