[tool.poetry]
name = "app"
version = "0.1.0"
description = "A sample fastapi project created with create-fastapi-project"
authors = [ "Your Name <your@email.com>",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.35.0"
aiohttp = "^3.9.5"
